1999-01-14  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/lang/Character/unicode.java (unicode): Ignore
	full width characters.

	* gnu/testlet/java/lang/Character/unicode.java (performTests):
	Fixed typo in upper-case check.

	* gnu/testlet/java/lang/Character/unicode.java (performTests):
	Fixed test to determine when character is a digit.  Now follows
	JCL volume 1.

	* gnu/testlet/java/lang/Character/unicode.java (performTests):
	Fixed recognition of upper case characters to match Java
	documentation.

	* gnu/testlet/java/lang/Character/unicode.java (performTests):
	Lower case letters don't necessarily have to be marked `Ll'.

	* gnu/testlet/java/lang/Character/UnicodeData.txt: Updated to
	version 2.1.8.

	* gnu/testlet/java/lang/Character/unicode.java: (performTests):
	When testing digit(), make sure the character is actually a
	digit according to the correct rules.

	* gnu/testlet/java/lang/Character/unicode.java (performTests):
	Handle Ps and Pf character categories.

	* gnu/testlet/java/lang/Character/unicode.java (performTests): Use
	correct rule for determining when character is lower case.

	* gnu/testlet/java/lang/Character/unicode.java (ignorable): New
	method.  Partially reverts previous change (JDK 1.2 says that
	7f-95 are ignorable).

	* gnu/testlet/java/lang/Character/unicode.java (performTests):
	Fixed definition of ignorable control character for
	isJavaIdentifierPart and isUnicodeIdentifierPart tests.
	Characters 0x7f to 0x9f are not identifier ignorable.

	* gnu/testlet/java/lang/Character/unicode.java (unicode): Use
	getResourceReader method from harness.

	* gnu/testlet/java/lang/Character/unicode.java: New version from
	Artur Biesiadowski.

	* THANKS: New file.

	Variant of patch from Artur Biesiadowski:
	* gnu/testlet/SimpleTestHarness.java (getDescription): New
	method.
	(check): Use it.

	* gnu/testlet/java/lang/Integer/new_Integer.java (test): Added
	checkpoints.

1999-01-14  Andrew Haley  <aph@cygnus.com>
